--- a/.github/workflows/deliveroo_tweets.yaml
+++ b/.github/workflows/deliveroo_tweets.yaml
@@ -20,7 +20,8 @@ jobs:
       - name: scrape @deliveroo_FR tweets
         shell: bash
         run: |
-          minet tw scrape tweets "from:@deliveroo_FR" --limit 10000 > deliveroo_FR-tweets.csv
+          #minet tw scrape tweets "from:@deliveroo_FR" --limit 10000 > deliveroo_FR-tweets.csv
+          minet tw scrape tweets "@deliveroo_FR" --limit 10000 > deliveroo_FR-tweets.csv
       - name: commit
         uses: ./.github/actions/commit
         with:
