--- a/.github/workflows/deliveroo_tweets.yaml
+++ b/.github/workflows/deliveroo_tweets.yaml
@@ -21,7 +21,7 @@ jobs:
         shell: bash
         run: |
           #minet tw scrape tweets "from:@deliveroo_FR" --limit 10000 > deliveroo_FR-tweets.csv
-          minet tw scrape tweets "@deliveroo_FR" --limit 10000 > deliveroo_FR-tweets.csv
+          minet tw scrape tweets "deliveroo_fr" --limit 10000 > deliveroo_FR-tweets.csv
       - name: commit
         uses: ./.github/actions/commit
         with:
