--- a/.github/workflows/zemmour_in.yaml
+++ b/.github/workflows/zemmour_in.yaml
@@ -26,3 +26,23 @@ jobs:
         uses: ./.github/actions/commit
         with:
           message: lol @cnews
+  scrape_bfm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: install minet
+        run: |
+          python -m pip install --upgrade pip
+          pip install minet==0.52.6
+      - name: scrape @BFMTV tweets
+        shell: bash
+        run: |
+          minet tw scrape tweets "from:@BFMTV" --limit 10000 > bfmtv-tweets.csv
+          #minet tw scrape tweets "cnews" --limit 10000 > bfmtv-tweets.csv
+      - name: commit
+        uses: ./.github/actions/commit
+        with:
+          message: lol @bfmtv
