--- a/.github/workflows/zemmour_in.yaml
+++ b/.github/workflows/zemmour_in.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: scrape @cnews tweets
         shell: bash
         run: |
-          minet tw scrape tweets "from:@CNEWS" --limit 30000 > cnews-tweets.csv
+          minet tw scrape tweets "from:@CNEWS since:2021-09-01" > cnews-tweets.csv
           #minet tw scrape tweets "cnews" --limit 10000 > cnews-tweets.csv
       - name: commit
         uses: ./.github/actions/commit
@@ -40,7 +40,7 @@ jobs:
       - name: scrape @BFMTV tweets
         shell: bash
         run: |
-          minet tw scrape tweets "from:@BFMTV" --limit 30000 > bfmtv-tweets.csv
+          minet tw scrape tweets "from:@BFMTV since:2021-09-01" > bfmtv-tweets.csv
           #minet tw scrape tweets "cnews" --limit 10000 > bfmtv-tweets.csv
       - name: commit
         uses: ./.github/actions/commit
@@ -60,7 +60,7 @@ jobs:
       - name: scrape @franceinfo tweets
         shell: bash
         run: |
-          minet tw scrape tweets "from:@franceinfo" --limit 30000 > franceinfo-tweets.csv
+          minet tw scrape tweets "from:@franceinfo since:2021-09-01" > franceinfo-tweets.csv
           #minet tw scrape tweets "cnews" --limit 10000 > franceinfo-tweets.csv
       - name: commit
         uses: ./.github/actions/commit
