--- a/.github/workflows/zemmour_in.yaml
+++ b/.github/workflows/zemmour_in.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: install minet
         run: |
           python -m pip install --upgrade pip
-          pip install minet==0.54.0
+          pip install minet==0.55.2
       - name: scrape @cnews tweets
         shell: bash
         run: |
@@ -36,7 +36,7 @@ jobs:
       - name: install minet
         run: |
           python -m pip install --upgrade pip
-          pip install minet==0.54.0
+          pip install minet==0.55.2
       - name: scrape @BFMTV tweets
         shell: bash
         run: |
@@ -56,7 +56,7 @@ jobs:
       - name: install minet
         run: |
           python -m pip install --upgrade pip
-          pip install minet==0.54.0
+          pip install minet==0.55.2
       - name: scrape @franceinfo tweets
         shell: bash
         run: |
@@ -66,3 +66,23 @@ jobs:
         uses: ./.github/actions/commit
         with:
           message: lol @franceinfo
+  scrape_mediapart:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: install minet
+        run: |
+          python -m pip install --upgrade pip
+          pip install minet==0.55.2
+      - name: scrape @mediapart tweets
+        shell: bash
+        run: |
+          minet tw scrape tweets "from:@Mediapart since:2021-09-01" > mediapart-tweets.csv
+          #minet tw scrape tweets "cnews" --limit 10000 > franceinfo-tweets.csv
+      - name: commit
+        uses: ./.github/actions/commit
+        with:
+          message: lol @Mediapart
