--- a/.github/workflows/cnews.yaml
+++ b/.github/workflows/cnews.yaml
@@ -20,8 +20,9 @@ jobs:
       - name: scrape @cnews tweets
         shell: bash
         run: |
-          minet tw scrape tweets "from:@CNEWS since:2021-09-01" > cnews-tweets.csv
+          #minet tw scrape tweets "from:@CNEWS since:2021-09-01" > cnews-tweets.csv
           #minet tw scrape tweets "cnews" --limit 10000 > cnews-tweets.csv
+          pip install git+https://github.com/paulgirard/minet.git@acquire_guest_token_by_api
       - name: commit
         uses: ./.github/actions/commit
         with:
