--- a/.github/workflows/franceinfo.yaml
+++ b/.github/workflows/franceinfo.yaml
@@ -16,13 +16,13 @@ jobs:
       - name: install minet
         run: |
           python -m pip install --upgrade pip
-          pip install minet==0.56.2
+          #pip install minet==0.56.2
+          pip install git+https://github.com/paulgirard/minet.git@acquire_guest_token_by_api
       - name: scrape @franceinfo tweets
         shell: bash
         run: |
-          #minet tw scrape tweets "from:@franceinfo since:2021-09-01" > franceinfo-tweets.csv
+          minet tw scrape tweets "from:@franceinfo since:2021-09-01" > franceinfo-tweets.csv
           #minet tw scrape tweets "cnews" --limit 10000 > franceinfo-tweets.csv
-          pip install git+https://github.com/paulgirard/minet.git@acquire_guest_token_by_api
       - name: commit
         uses: ./.github/actions/commit
         with:
