--- a/.github/workflows/mediapart.yaml
+++ b/.github/workflows/mediapart.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: scrape @mediapart tweets
         shell: bash
         run: |
-          #minet tw scrape tweets "from:@Mediapart since:2021-09-01" > mediapart-tweets.csv
+          minet tw scrape tweets "from:@Mediapart since:2021-09-01" > mediapart-tweets.csv
           #minet tw scrape tweets "cnews" --limit 10000 > franceinfo-tweets.csv
       - name: commit
         uses: ./.github/actions/commit
